After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779869 - glupload: fix GValue leak
glupload: fix GValue leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.10.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 781876 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2017-03-10 17:02 UTC by Vincent Penquerc'h
Modified: 2017-04-28 08:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
glupload: fix GValue leak (780 bytes, patch)
2017-03-10 17:03 UTC, Vincent Penquerc'h
committed Details | Review

Description Vincent Penquerc'h 2017-03-10 17:02:41 UTC
glupload: fix GValue leak
Comment 1 Vincent Penquerc'h 2017-03-10 17:03:53 UTC
Created attachment 347657 [details] [review]
glupload: fix GValue leak

Found while looking for https://bugzilla.gnome.org/show_bug.cgi?id=778611, but no huge leak found
Comment 2 Nicolas Dufresne (ndufresne) 2017-03-10 22:08:01 UTC
Review of attachment 347657 [details] [review]:

Looks good!
Comment 3 Vincent Penquerc'h 2017-03-13 09:30:29 UTC
commit 04f8c7d7296aa278bd33e52db335c077a8a53d2a
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Fri Mar 10 16:57:51 2017 +0000

    glupload: fix GValue leak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=779869
Comment 4 Matthew Waters (ystreet00) 2017-04-28 08:20:53 UTC
*** Bug 781876 has been marked as a duplicate of this bug. ***
Comment 5 Matthew Waters (ystreet00) 2017-04-28 08:21:24 UTC
and 1.10 0899d4570264f0ed4233ef5bbcfb566513f17413