glupload: fix GValue leak

https://bugzilla.gnome.org/show_bug.cgi?id=779869